[package]
name = "token_metadata"
version = "0.1.0"
edition = "2021"
authors = ["Ruben Ribeiro <rumribeiro@gmail.com>"]
description = "A Query Service for ERC-20 Token Netadata"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"  # JSON support
ureq = { version = "2.7.1", features = ["json", "charset"] }
redis = "0.24.0"  # Redis client


[profile.release]
opt-level = 3      # Maximum optimization
lto = true         # Link-time optimization
codegen-units = 1  # Maximize performance
panic = 'abort'    # Remove panic unwinding code
strip = true       # Remove debug symbols
